correct spacing for feed

--- a/src/app/feed/feed.component.css
+++ b/src/app/feed/feed.component.css
@@ -1,5 +1,6 @@
 
 .container {
-  margin: 25px;
+  margin: 5px;
+  padding-top: 25px;
   text-align: center;
 }
