--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,7 +1,8 @@
 .profile {
-  padding: 2px;
-  /* background: lightyellow; */
-  /* border: 2px solid black; */
+  margin-top: 30px;
+  padding: 20px;
+  background: lightyellow;
+  border: 2px solid black;
   position: relative;
 }
 
